--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
          <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>3.0.3.RELEASE</version>
+            <version>3.1.1.RELEASE</version>
         </dependency>
 
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-jms</artifactId>
-             <version>3.0.3.RELEASE</version>
+             <version>3.1.1.RELEASE</version>
          </dependency>
 
          <dependency>
@@ -58,6 +58,12 @@
              <groupId>org.apache.activemq</groupId>
              <artifactId>activemq-camel</artifactId>
              <version>5.4.3</version>
+         </dependency>
+
+         <dependency>
+             <groupId>org.slf4j</groupId>
+             <artifactId>slf4j-simple</artifactId>
+             <version>1.6.4</version>
          </dependency>
 
 
